# aadc2017

./: CMakeLists.txt
ActionStopFilter/: ActionStop.cpp  ActionStop.h  CMakeLists.txt  Makefile  cmake_install.cmake  stdafx.h
FTO_CarPose/: CMakeLists.txt  cCarPose.cpp  cCarPose.h
FTO_MarkerDetector/: CMakeLists.txt  Makefile  cMarkerDetector.cpp  cMarkerDetector.h  cmake_install.cmake
FTO_MarkerPos/: CMakeLists.txt  cMarkerPos.cpp  cMarkerPos.h  stdafx.h
FTO_MoveToPoint/: CMakeLists.txt  bezier.cpp  bezier.h  cMoveToPoint.cpp  cMoveToPoint.h
FTO_ObjectSpecifier/: CMakeLists.txt  ObjectSpecifier.cpp  ObjectSpecifier.h  stdafx.h
FTO_ObjectSpecifier/ThriftExtIf/: CMakeLists.txt  ExtIf.thrift  howto_translate_thrift.readme
FTO_ObjectSpecifier/ThriftExtIf/gen-cpp/: ExtIf_types.cpp  ExtIf_types.h  ExtService.cpp  ExtService.h  ExtService_server.skeleton.cpp
FTO_ObjectSpecifier/ThriftExtIf/gen-py/ExtIf/: ExtService-remote  ExtService.py  ttypes.py
FTO_OutputLimiter/: CMakeLists.txt  cOutputLimiter.cpp  cOutputLimiter.h  stdafx.h
FTO_PIDController/: CMakeLists.txt  Makefile  PIDController.cpp  PIDController.h  TSignalValue.h  cmake_install.cmake  stdafx.cpp  stdafx.h
ImageProcessing/: CMakeLists.txt  Makefile  cmake_install.cmake
ImageProcessing/CameraParameterEstimator/: CMakeLists.txt  CameraEstimator.cpp  CameraEstimator.h  CameraEstimatorAdapter.cpp  CameraEstimatorAdapter.h  Makefile  cmake_install.cmake  stdafx.h
ImageProcessing/LineFilter/: CMakeLists.txt  LineFilter.cpp  LineFilter.h  LineFilterAdapter.cpp  LineFilterAdapter.h  Makefile  cmake_install.cmake  stdafx.h
ImageProcessing/LineSpecifier/: .cproject  .gitignore  .project  CMakeLists.txt  LineSpecifier.cpp  LineSpecifier.h  LineSpecifierAdapter.cpp  LineSpecifierAdapter.h  LineTemplate.cpp  LineTemplate.h  LineTemplateGenerator.cpp  LineTemplateGenerator.h  Makefile  Pose3D.h  PoseCache.h  cmake_install.cmake  stdafx.h
ImageProcessing/LineSpecifier/cache/: DetectionCache.cpp  DetectionCache.h
ImageProcessing/LineSpecifier/crossing/: IntersectionDetector.cpp  IntersectionDetector.h
ImageProcessing/LineSpecifier/lines/: LineDetectorHorizontal.cpp  LineDetectorHorizontal.h  LineDetectorVertical.cpp  LineDetectorVertical.h
ImageProcessing/LineSpecifier/parking/: ParkingSpotDetector.cpp  ParkingSpotDetector.h
ImageProcessing/LineSpecifier/speed/: SpeedRecommender.cpp  SpeedRecommender.h
ImageProcessing/LineSpecifier/stop/: StopLineDetector.cpp  StopLineDetector.h
ImageProcessing/RoadSignDetection/: .cproject  .project  CMakeLists.txt  RoadSign.h  RoadSignDetectionAdapter.cpp  RoadSignDetectionAdapter.h  TActionStruct.h  TFeedbackStruct.h  TPoseStruct.h  TTrafficSign.h  stdafx.h
LightControl/: CMakeLists.txt  LightControl.cpp  LightControl.h  Makefile  cmake_install.cmake
ObstacleDetection/: .gitignore  CMakeLists.txt  Makefile  ObstacleDetection.cpp  ObstacleDetection.h  cmake_install.cmake  stdafx.h
StateControl/: CMakeLists.txt  Makefile  cmake_install.cmake
StateControl/ScmJuryCommunication/: CMakeLists.txt  Makefile  Maneuverlist.h  ScmJuryCommunication.cpp  ScmJuryCommunication.h  StateControl.h  cmake_install.cmake  stdafx.cpp  stdafx.h
StateControl/ScmJuryCommunication_original/: CMakeLists.txt  ScmJuryCommunication.cpp  ScmJuryCommunication.h  juryEnums.h  stdafx.h
StateControl/StateControlManagementSLIM/: CMakeLists.txt  Makefile  StateControlManagementSlim.cpp  StateControlManagementSlim.h  cmake_install.cmake  stdafx.h
TimerFilter/: CMakeLists.txt  Makefile  TimerFilter.cpp  TimerFilter.h  cmake_install.cmake  stdafx.h
UltrasonicACC/: CMakeLists.txt  Makefile  README_for_ACC_XML_creation.txt  UltrasonicACC.cpp  UltrasonicACC.h  cmake_install.cmake  stdafx.h
UltrasonicCheck/: CMakeLists.txt  Makefile  UltrasonicCheck.cpp  UltrasonicCheck.h  cmake_install.cmake  stdafx.cpp  stdafx.h
UltrasonicEmergencyActiveBreak/: CMakeLists.txt  Makefile  UltrasonicEmergencyActiveBreak.cpp  UltrasonicEmergencyActiveBreak.h  cmake_install.cmake
UltrasonicFilter/: CMakeLists.txt  Makefile  UltrasonicFilter.cpp  UltrasonicFilter.h  cmake_install.cmake
UltrasonicStructSplit/: CMakeLists.txt  Makefile  UltrasonicStructSplit.cpp  UltrasonicStructSplit.h  cmake_install.cmake
